Update Privacy Policy
Update Privacy Policy

--- a/index.html
+++ b/index.html
@@ -3,24 +3,47 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Privacy Policy – Karma Tracker</title>
+  <title>Privacy Policy – Habits + Karma</title>
 </head>
 <body style="font-family: Arial, sans-serif; max-width: 800px; margin: 40px auto; padding: 20px; line-height: 1.6;">
-  <h1>Privacy Policy – Karma Tracker</h1>
+  <h1>Privacy Policy – Habits + Karma</h1>
 
-  <p>Your privacy is important to us. This Privacy Policy explains how we handle information related to the users of our application.</p>
+  <p>Your privacy is important to us. This Privacy Policy explains how information is collected and used when you use the Karma Tracker application.</p>
 
-  <h2>1. Collection and Use of Information</h2>
-  <p>We do not collect or use any personal data from users of our application. The app does not request, store, or transmit any data that could be used to identify a user.</p>
+  <h2>1. Information We Collect</h2>
+  <p>We may collect certain data automatically to help us understand how the app is used and to improve its functionality. This data may include:</p>
+  <ul>
+    <li>Device identifiers (such as advertising identifiers)</li>
+    <li>App usage and interaction data (e.g. app launches, screen views, feature usage)</li>
+    <li>Purchase information related to subscriptions</li>
+    <li>Diagnostic data, including crash reports and performance metrics</li>
+  </ul>
+  <p>We do not collect personal information such as your name, physical address, or contact details.</p>
 
-  <h2>2. Permissions</h2>
-  <p>The application may require certain permissions to function (e.g., internet access), but these permissions are solely used for the operation of the app and are not related to data collection.</p>
+  <h2>2. Use of Information</h2>
+  <p>The collected data is used for the following purposes:</p>
+  <ul>
+    <li>Analytics and measurement of app usage</li>
+    <li>Improving app stability, performance, and user experience</li>
+    <li>Subscription management and purchase validation</li>
+    <li>Advertising attribution and measurement</li>
+  </ul>
 
-  <h2>3. Changes to the Privacy Policy</h2>
-  <p>We reserve the right to update or modify this Privacy Policy at any time. If this happens, we will publish the updated policy on this page.</p>
+  <h2>3. Tracking and Advertising</h2>
+  <p>The app may use third-party services (such as analytics and attribution SDKs) that collect data for tracking purposes, including linking app activity with device identifiers for advertising and analytics.</p>
+  <p>Where required by law, we request your permission before enabling such tracking.</p>
 
-  <h2>4. Contact</h2>
-  <p>If you have any questions or suggestions regarding this Privacy Policy, please contact us at:<br/>
+  <h2>4. Permissions</h2>
+  <p>The application may request certain system permissions (such as access to network services or tracking authorization). These permissions are used only to support the app’s functionality, analytics, and advertising measurement.</p>
+
+  <h2>5. Data Sharing</h2>
+  <p>Collected data may be shared with trusted third-party service providers solely for analytics, advertising attribution, and app performance monitoring, in accordance with applicable laws.</p>
+
+  <h2>6. Changes to This Privacy Policy</h2>
+  <p>We may update this Privacy Policy from time to time. Any changes will be published on this page.</p>
+
+  <h2>7. Contact</h2>
+  <p>If you have any questions or concerns regarding this Privacy Policy, please contact us at:<br/>
   <a href="mailto:tracker.karma@gmail.com">tracker.karma@gmail.com</a></p>
 </body>
 </html>
