Update Privacy Policy

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body style="font-family: Arial, sans-serif; max-width: 800px; margin: 40px auto; padding: 20px; line-height: 1.6;">
   <h1>Privacy Policy – Habits + Karma</h1>
 
-  <p>Your privacy is important to us. This Privacy Policy explains how information is collected and used when you use the Karma Tracker application.</p>
+  <p>Your privacy is important to us. This Privacy Policy explains how information is collected and used when you use the Habits + Karma application.</p>
 
   <h2>1. Information We Collect</h2>
   <p>We may collect certain data automatically to help us understand how the app is used and to improve its functionality. This data may include:</p>
